--- a/.gitignore
+++ b/.gitignore
@@ -478,3 +478,28 @@ $RECYCLE.BIN/
 .vs/Tubes2_Euforia/FileContentIndex/07352720-16f7-4277-af20-8c980f92184b.vsidx
 .vs/Tubes2_Euforia/FileContentIndex/41e15d57-9974-4bc5-8292-035b1620b406.vsidx
 .vs/Tubes2_Euforia/FileContentIndex/d961ec21-c7be-469c-97fa-a4c51ae9e7aa.vsidx
+obj/Tubes2_Euforia.csproj.nuget.g.props
+obj/Tubes2_Euforia.csproj.nuget.dgspec.json
+obj/project.nuget.cache
+obj/project.assets.json
+obj/Debug/net7.0-windows/Tubes2_Euforia.pdb
+obj/Debug/net7.0-windows/Tubes2_Euforia.genruntimeconfig.cache
+obj/Debug/net7.0-windows/Tubes2_Euforia.GeneratedMSBuildEditorConfig.editorconfig
+obj/Debug/net7.0-windows/Tubes2_Euforia.dll
+obj/Debug/net7.0-windows/Tubes2_Euforia.csproj.GenerateResource.cache
+obj/Debug/net7.0-windows/Tubes2_Euforia.csproj.CoreCompileInputs.cache
+obj/Debug/net7.0-windows/Tubes2_Euforia.assets.cache
+obj/Debug/net7.0-windows/refint/Tubes2_Euforia.dll
+obj/Debug/net7.0-windows/ref/Tubes2_Euforia.dll
+obj/Debug/net7.0-windows/apphost.exe
+bin/Debug/net7.0-windows/Tubes2_Euforia.pdb
+bin/Debug/net7.0-windows/Tubes2_Euforia.exe
+bin/Debug/net7.0-windows/Tubes2_Euforia.dll
+.vs/Tubes2_Euforia/v17/.suo
+.vs/Tubes2_Euforia/FileContentIndex/d961ec21-c7be-469c-97fa-a4c51ae9e7aa.vsidx
+.vs/Tubes2_Euforia/FileContentIndex/cf89d542-3437-4b7f-8fe3-05b5eb20f40c.vsidx
+.vs/Tubes2_Euforia/FileContentIndex/7c90ff08-5ac8-45de-91c3-fdb68ebb50c1.vsidx
+.vs/Tubes2_Euforia/FileContentIndex/41e15d57-9974-4bc5-8292-035b1620b406.vsidx
+.vs/Tubes2_Euforia/FileContentIndex/2c214b9e-e80a-4e4f-93ea-03b08ac5510e.vsidx
+.vs/Tubes2_Euforia/FileContentIndex/085505f7-5b43-4c9f-87db-bc6a3e33c996.vsidx
+.vs/Tubes2_Euforia/FileContentIndex/07352720-16f7-4277-af20-8c980f92184b.vsidx
